--- a/pages/animal.html
+++ b/pages/animal.html
@@ -24,7 +24,7 @@
       </div>
       <div class="dropdown-content">
         <a href="../index.html">Home</a>
-        <a href="animal.html">Friends, <br>Family <br>Love</a>
+        <a href="friends_family_love.html">Friends, <br>Family <br>Love</a>
       </div>
     </div>
   </div>
