--- a/pages/friends_family_love.html
+++ b/pages/friends_family_love.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Photography">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../css/pages.css" rel="STYLESHEET" type="text/css">
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -26,6 +27,7 @@
       <div class="dropdown-content">
         <a href="../index.html">Home</a>
         <a href="animal.html">Animals</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </div>
@@ -66,9 +68,11 @@
             Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.<br>
             <br></h3>
           <hr class="intro-divider">
-          <ul class="list-inline intro-social-buttons">
-            <a class="instagram" href="https://www.instagram.com/tineke_photography/"><i class='fab fa-instagram'></i> Instagram </a>
-          </ul>
+          <div class="social-media">
+            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-envelope"></a>
+          </div>
         </div>
       </div>
     </div>
@@ -175,10 +179,13 @@
 </div>
 
 <footer>
-  <p>Tineke Photography<br><br>
-    U kan me altijd bereiken via het onderstaande mailadres of via instagram.<br><br>
-    <a href="mailto:tinekehaverhals@hotmail.com">Stuur me een mailtje! </a></p>
-  <button class="buttonInstagram"><a href="https://www.instagram.com/tineke_photography/"><i class='fab fa-instagram'></i> Instagram </a></button><br><br>
+  <h4>Blijf op de hoogte door me te volgen op Facebook / Instagram.</h4>
+  <div class="social-mediafooter">
+    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
+    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
+    <a href="#" class="fa fa-envelope" id="footerimg"></a>
+  </div>
+
 </footer>
 
 </body>
