--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Photography">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="STYLESHEET" type="text/css">
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <nav id="navbar">
@@ -135,17 +135,19 @@
       </span>
       <br><br>
     </div>
-    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media" />
+    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media2" />
   </div>
   <div class="card-shadow"></div>
 </div>
 
 <br><br>
 <footer>
-  <p>Tineke Photography<br><br>
-    U kan me altijd bereiken via het onderstaande mailadres of via instagram.<br><br>
-    <a href="mailto:tinekehaverhals@hotmail.com">Stuur me een mailtje! </a></p>
-  <button class="buttonInstagram"><a href="https://www.instagram.com/tineke_photography/"><i class='fab fa-instagram'></i> Instagram </a></button><br><br>
+  <div class="social-media">
+    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-envelope"></a>
+  </div>
+
 </footer>
 <script>
 
