--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,33 +66,57 @@
             <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram.</h6>
             <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-envelope"></a>
+            <a href="contact.html" class="fa fa-envelope"></a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- Canvas -->
 <div class="overlay">
   <div class="overlay__inner">
     <h1 class="overlay__title">
-      Heb je interesse in een fotoshoot?
+      Heb je interesse in een fotoshoot of wil je graag meer informatie?<br>
+    </h1>
+    <p>Vul het contactformulier in en ik contacteer je zo snel mogelijk. <br>
+      Het is enkel mogelijk om een fotoshoot in te plannen in het weekend. <br>
+      Na het invullen van het contactformulier bezorg ik u alle vrije momenten om een fotoshoot in te plannen.
+    </p>
+    <p class="overlay__description">
+    <form action="https://formspree.io/f/mbjezgqz" method="POST">
+    <p>Naam + voornaam</p>
+    <input type="text" name="Name" placeholder="Naam + voornaam" required>
+    <p>Email</p>
+      <input type="email" name="Email" placeholder="Email" required>
+    <p>Kies uw photoshoot</p>
+    <select name="Photography">
+      <option>Kies uw photoshoot</option>
+      <option>Huisdieren shoot</option>
+      <option>Koppel/duo shoot</option>
+      <option>Familie shoot</option>
+      <option>Persoonlijke/one shoot</option>
+      <option>Interesse in een andere shoot?</option>
+    </select><br>
+    <p>Berichtje</p>
+      <textarea name="Message" placeholder="Berichtje" required></textarea>
+      <br><br>
+      <button type="submit">Versturen</button>
+     </form>
+    </p>
+  </div>
+</div>
+<br><br>
+<div class="overlay">
+  <div class="overlay__inner">
+    <h1 class="overlay__title">
+      Wat mag ik verwachten van de fotoshoot?
     </h1>
     <p class="overlay__description">
-      Je kan me contacteren via Facebook / Instagram / mail.<br>
-      Stuur me een berichtje met je contactgegevens. <br>
-      Daarnaast stuur je me welke fotoshoot je wenst:
-      <ul class="opsomming">
-         <li>Huisdieren</li>
-         <li>Koppel/duo shoot</li>
-         <li>Familie</li>
-         <li>Persoonlijke/one shoot</li>
-         <li>Heb je interesse in een andere photoshoot, mag je me altijd contacteren om het te bespreken</li>
-  </ul>
-    Nadat je een berichtje hebt gestuurd, ontvang je alle vrije dagen.*
-    <br><br>
-    *Het is enkel mogelijk om een fotoshoot in te plannen in het weekend of feestdagen.
+      De fotoshoot zal een uurtje in beslag nemen.<br><br>
+      Enkele dagen na de fotoshoot ontvang je een mapje in je mailbox. <br><br>
+      In het mapje vind je +- 25 bewerkte foto's.<br><br>
+
+      * Gelieve rekening te houden dat de fotoshoot verplaatst met worden als het weer het niet toe laat.
     </p>
   </div>
 </div>
@@ -103,18 +127,10 @@
       Enkele tips voor de fotoshoot
     </h1>
     <p class="overlay__description">
-      Zorg voor matching outfits, het is mogelijk om in verschillende outfits shoots te doen. <br>
-    
-    <ul class="opsomming">
-      <li>Huisdieren</li>
-      <li>Koppel/duo shoot</li>
-      <li>Familie</li>
-      <li>Persoonlijke/one shoot</li>
-      <li>Heb je interesse in een andere photoshoot, mag je me altijd contacteren om het te bespreken</li>
-    </ul>
-    Nadat je een berichtje hebt gestuurd, ontvang je alle vrije dagen.*
-    <br><br>
-    *Het is enkel mogelijk om een fotoshoot in te plannen in het weekend of feestdagen.
+      Zorg voor matching outfits, het is mogelijk om in verschillende outfits shoots te doen. <br><br>
+      Draag kleren waar je u comfortabel invoelt en waar je in zal stralen.<br><br>
+      Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zullen zijn. <br><br>
+
     </p>
   </div>
 </div>
@@ -124,10 +140,8 @@
   <div class="social-mediafooter">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
-    <a href="#" class="fa fa-envelope" id="footerimg"></a>
+    <a href="contact.html" class="fa fa-envelope" id="footerimg"></a>
   </div>
-
 </footer>
-
 </body>
 </html>
