--- a/pages/friends_family_love.html
+++ b/pages/friends_family_love.html
@@ -71,7 +71,7 @@
           <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-envelope"></a>
+            <a href="contact.html" class="fa fa-envelope"></a>
           </div>
         </div>
       </div>
@@ -183,10 +183,8 @@
   <div class="social-mediafooter">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
-    <a href="#" class="fa fa-envelope" id="footerimg"></a>
+    <a href="contact.html" class="fa fa-envelope" id="footerimg"></a>
   </div>
-
 </footer>
-
 </body>
 </html>
