--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="utf-8">
   <title>Tineke Photography</title>
@@ -25,6 +25,7 @@
       <div class="dropdown-content">
         <a href="pages/animal.html">Animal</a><br>
         <a href="pages/friends_family_love.html">Friends, <br>Family <br>Love</a>
+        <a href="pages/contact.html">Contact</a><br>
       </div>
     </div>
   </div>
@@ -61,11 +62,13 @@
       <div class=header-row-center>
         <h3 class="header-row-title">Creating memories with you, for you! </h3>
       </div>
+      <!--
       <div class="header-row-bottom">
         <button class="button-down">
           <i class="fas fa-arrow-down"></i>
         </button>
       </div>
+      -->
     </div>
   </div>
   <div class="header-right">
@@ -75,7 +78,7 @@
           <h1>Tineke <br>Photography</h1>
         </div>
       </div>
-      <div class="header-img-overlay"></div>
+      <!--<div class="header-img-overlay"></div>-->
     </div>
   </div>
 </header>
@@ -100,6 +103,25 @@
     </div>
   </div>
 </main>
+
+<div class="card-container">
+  <div class="card u-clearfix">
+    <div class="card-body">
+      <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
+      <span class="card-description subtle">
+        Fotoshoot tegen een laag tarief van 75 euro.<br><br>
+        Voor dit bedrag ontvangt u een album met 20 bewerkte foto's.<br><br>
+        Alle foto's worden professioneel nabewerkt. <br><br>
+        Een fotoshoot duurt doorgaans 1 uur.<br><br>
+        Liefdevolle, spontane en speelse foto's<br><br>
+        Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.
+
+      </span>
+    </div>
+    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media" />
+  </div>
+  <div class="card-shadow"></div>
+</div>
 
 <div class="card-container">
   <div class="card u-clearfix">
@@ -135,7 +157,7 @@
       </span>
       <br><br>
     </div>
-    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media2" />
+    <img src="img/pages/duo_shoot/10.JPG" alt="" height="454" width="316" class="card-media2" />
   </div>
   <div class="card-shadow"></div>
 </div>
@@ -145,9 +167,8 @@
   <div class="social-media">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-envelope"></a>
+    <a href="pages/contact.html" class="fa fa-envelope"></a>
   </div>
-
 </footer>
 <script>
 
