--- a/pages/animal.html
+++ b/pages/animal.html
@@ -198,9 +198,8 @@
   <div class="social-mediafooter">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
-    <a href="#" class="fa fa-envelope" id="footerimg"></a>
+    <a href="contact.html" class="fa fa-envelope" id="footerimg"></a>
   </div>
-
 </footer>
 
 </body>
