update index page
update index page

--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
     return false;
   };
 
-  document.onmousewheel = function(e) {
-    e = e || window.event;
-    var d = e.wheelDelta / 20 || -e.detail;
-    radius += d;
-    init(1);
-  };
+  //document.onmousewheel = function(e) {
+   // e = e || window.event;
+  //  var d = e.wheelDelta / 20 || -e.detail;
+   // radius += d;
+   // init(1);
+  //};
 </script>
 
 
