--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         Fotoshoot tegen een laag tarief van 75 euro.<br><br>
         Voor dit bedrag ontvangt u een album met 20 bewerkte foto's.<br><br>
         Alle foto's worden professioneel nabewerkt. <br><br>
-        Een fotoshoot duurt doorgaans 1 uur.<br><br>
+        Een fotoshoot duurt doorgaans een uurtje.<br><br>
+        Fotoshoot op maat, naar eigen wens.<br><br>
         Liefdevolle, spontane en speelse foto's<br><br>
         Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.
-
       </span>
     </div>
     <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media" />
@@ -273,7 +273,7 @@
   //  var d = e.wheelDelta / 20 || -e.detail;
    // radius += d;
    // init(1);
-  //};
+ // };
 </script>
 
 
