--- a/pages/animal.html
+++ b/pages/animal.html
@@ -60,8 +60,10 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
+          <div class="name-animal">
           <h1>Trouwe viervoeter</h1>
-          <h3>Fotosessies op locatie in natuurlijk licht <br>
+          </div>
+            <h3>Fotosessies op locatie in natuurlijk licht <br>
             Portret- en actiefoto's mogelijk <br>
             Baasjes zijn mee welkom op de foto <br><br>
             Elk dier is uniek. Elke relatie tussen mens en dier is enig en onverklaarbaar. <br><br>
@@ -71,7 +73,6 @@
           <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-envelope"></a>
           </div>
         </div>
       </div>
