--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,13 +60,12 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
-          <h1>contact</h1>
+          <h1>Contact</h1>
           <hr class="intro-divider">
           <div class="social-media">
-            <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram.</h6>
+            <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram</h6>
             <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-            <a href="contact.html" class="fa fa-envelope"></a>
           </div>
         </div>
       </div>
@@ -76,11 +75,11 @@
 <div class="overlay">
   <div class="overlay__inner">
     <h1 class="overlay__title">
-      Heb je interesse in een fotoshoot of wil je graag meer informatie?<br>
+      Heb je interesse in een fotoshoot of wil je vrijblijvend meer informatie?<br>
     </h1>
-    <p>Vul het contactformulier in en ik contacteer je zo snel mogelijk. <br>
-      Het is enkel mogelijk om een fotoshoot in te plannen in het weekend. <br>
-      Na het invullen van het contactformulier bezorg ik u alle vrije momenten om een fotoshoot in te plannen.
+    <p>Gelieve het contactformulier in te vullen.<br>
+      Na het invullen van het contactformulier bezorg ik u alle vrije momenten om een fotoshoot in te plannen.<br>
+      Fotoshoots zijn uitsluitend in het weekend.
     </p>
     <p class="overlay__description">
     <form action="https://formspree.io/f/mbjezgqz" method="POST">
@@ -88,6 +87,8 @@
     <input type="text" name="Name" placeholder="Naam + voornaam" required>
     <p>Email</p>
       <input type="email" name="Email" placeholder="Email" required>
+    <p>GSM nummer</p>
+    <input type="tel" name="Telefoon" placeholder="GSM nummer" required>
     <p>Kies uw photoshoot</p>
     <select name="Photography">
       <option>Kies uw photoshoot</option>
@@ -113,10 +114,9 @@
     </h1>
     <p class="overlay__description">
       De fotoshoot zal een uurtje in beslag nemen.<br><br>
-      Enkele dagen na de fotoshoot ontvang je een mapje in je mailbox. <br><br>
-      In het mapje vind je +- 25 bewerkte foto's.<br><br>
+      Enkele dagen na de fotoshoot ontvang je een map in je mailbox met hierin +- 20 bewerkte foto's. <br><br>
 
-      * Gelieve rekening te houden dat de fotoshoot verplaatst met worden als het weer het niet toe laat.
+      * Gelieve rekening te houden dat de fotoshoot verplaatst moet worden als het weer het niet toe laat.
     </p>
   </div>
 </div>
@@ -124,19 +124,20 @@
 <div class="overlay">
   <div class="overlay__inner">
     <h1 class="overlay__title">
-      Enkele tips voor de fotoshoot
+      Enkele tips voor de fotoshoot:
     </h1>
     <p class="overlay__description">
-      Zorg voor matching outfits, het is mogelijk om in verschillende outfits shoots te doen. <br><br>
-      Draag kleren waar je u comfortabel invoelt en waar je in zal stralen.<br><br>
-      Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zullen zijn. <br><br>
-
+      <ul>
+      <li>Zorg voor matching outfits, het is mogelijk om in verschillende outfits de shoot te doen.</li> <br>
+      <li>Draag kleren waar je u comfortabel in voelt.</li> <br>
+     <li> Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zijn.</li><br>
+  </ul>
     </p>
   </div>
 </div>
 <br><br>
 <footer>
-  <h4>Blijf op de hoogte door me te volgen op Facebook / Instagram.</h4>
+  <h4>Blijf op de hoogte door me te volgen op<br> Facebook / Instagram</h4>
   <div class="social-mediafooter">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
