--- a/pages/friends_family_love.html
+++ b/pages/friends_family_love.html
@@ -60,7 +60,9 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
+          <div class="name-other-page">
           <h1>Friends, Family & Love</h1>
+          </div>
           <h3>Maak je veel foto's van je kinderen of ben jij altijd diegene die op vriendenuitjes of familiefeesten de foto's maakt
             maar sta je er dan <br><br>nooit zelf eens bij op? Dat is zo herkenbaar voor velen terwijl het net heel waardevol is om samen <br><br>
             mooie foto's te hebben waar jullie allemaal opstaan. Daarom zie ik een shoot niet als een kost maar als een investering.<br><br>
@@ -71,7 +73,6 @@
           <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-            <a href="contact.html" class="fa fa-envelope"></a>
           </div>
         </div>
       </div>
