--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
     <div class="card-body">
       <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
       <span class="card-description subtle">
-        Fotoshoot tegen een laag tarief van 75 euro.<br><br>
-        Voor dit bedrag ontvangt u een album met 20 bewerkte foto's.<br><br>
-        Alle foto's worden professioneel nabewerkt. <br><br>
-        Een fotoshoot duurt doorgaans een uurtje.<br><br>
-        Fotoshoot op maat, naar eigen wens.<br><br>
-        Liefdevolle, spontane en speelse foto's<br><br>
+        <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
+        <li>Voor dit bedrag ontvangt u een album met 20 <br> bewerkte foto's</li><br>
+        <li>Alle foto's worden professioneel nabewerkt</li><br>
+        <li>Een fotoshoot duurt doorgaans een uurtje</li><br>
+        <li>Fotoshoot op maat, naar eigen wens</li><br>
+        <li>Liefdevolle, spontane en speelse foto's</li><br>
         Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.
       </span>
     </div>
@@ -128,11 +128,11 @@
     <div class="card-body">
       <h2 class="card-title">Trouwe Viervoeters</h2>
       <span class="card-description subtle">
-        Fotosessies op locatie in natuurlijk licht <br>
-        Portret- en actiefoto's mogelijk <br>
-        Baasjes zijn mee welkom op de foto <br><br>
-        Elk dier is uniek. Elke relatie tussen mens en dier is enig en onverklaarbaar. <br><br>
-       Herinneringen vervagen, maar foto’s vereeuwigen. <br><br>
+        <li>Fotosessies op locatie in natuurlijk licht </li><br>
+        <li>Portret- en actiefoto's mogelijk </li><br>
+        <li>Baasjes zijn mee welkom op de foto</li> <br>
+        Ieder dier is uniek. Elke relatie tussen mens en dier is enig en onverklaarbaar. <br><br>
+       Herinneringen vervagen, foto’s vereeuwigen. <br><br>
         <button class="button button1"><a href="pages/animal.html">Portfolio</a></button>
       </span>
     </div>
@@ -145,13 +145,11 @@
 <div class="card-container" >
   <div class="card u-clearfix">
     <div class="card-body">
-      <h2 class="card-title">Friends, Family & Love</h2>
+      <h2 class="card-title">Friends <br> Family <br> Love</h2>
       <span class="card-description subtle">
-        Maak je veel foto's van je kinderen of ben jij altijd diegene die op vriendenuitjes of familiefeesten de foto's maakt
-        maar sta je er dan <br>nooit zelf eens bij op? Dat is zo herkenbaar voor velen terwijl het net heel waardevol is om samen <br>
-        mooie foto's te hebben waar jullie allemaal opstaan. Daarom zie ik een shoot niet als een kost maar als een investering.<br>
-        En geloof me, dit is er eentje zonder risico's.<br>
-        Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.<br>
+        Maak je veel foto's van je kinderen of ben jij altijd diegene die op vriendenuitjes of familiefeesten de foto's neemt en sta je er dan nooit zelf bij op?<br>
+        Dat is zo herkenbaar voor velen terwijl het net heel waardevol is om samen mooie foto's te hebben waar jullie allemaal op staan.<br>
+        Daarom zie ik een shoot niet als een kost maar als een investering die je zal doen lachen en je de rest van je leven zal kunnen koesteren.<br>
         <br>
         <button class="button button1"><a href="pages/friends_family_love.html">Portfolio</a></button>
       </span>
