--- a/pages/animal.html
+++ b/pages/animal.html
@@ -25,7 +25,7 @@
       </div>
       <div class="dropdown-content">
         <a href="../index.html">Home</a>
-        <a href="friends_family_love.html">Friends, <br>Family <br>Love</a>
+        <a href="friends_family_love.html">Friends <br>Family <br>Love</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
