--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
       <div class="dropdown-content">
         <a href="../index.html">Home</a>
         <a href="animal.html">Animal</a>
-        <a href="friends_family_love.html">Friends, <br>Family <br>Love</a>
+        <a href="friends_family_love.html">Friends<br>Family <br>Love</a>
       </div>
     </div>
   </div>
