--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
       <span class="card-description subtle">
         <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
-        <li>Voor dit bedrag ontvangt u een album met 20 <br> bewerkte foto's</li><br>
+        <li>Voor dit bedrag ontvangt u een album met <br>20 bewerkte foto's</li><br>
         <li>Alle foto's worden professioneel nabewerkt</li><br>
         <li>Een fotoshoot duurt doorgaans een uurtje</li><br>
         <li>Fotoshoot op maat, naar eigen wens</li><br>
@@ -118,7 +118,7 @@
         Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.
       </span>
     </div>
-    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media" />
+    <img src="img/pages/duo_shoot/8.jpg" alt="" height="454" width="316" class="card-media3" />
   </div>
   <div class="card-shadow"></div>
 </div>
@@ -147,8 +147,8 @@
     <div class="card-body">
       <h2 class="card-title">Friends <br> Family <br> Love</h2>
       <span class="card-description subtle">
-        Maak je veel foto's van je kinderen of ben jij altijd diegene die op vriendenuitjes of familiefeesten de foto's neemt en sta je er dan nooit zelf bij op?<br>
-        Dat is zo herkenbaar voor velen terwijl het net heel waardevol is om samen mooie foto's te hebben waar jullie allemaal op staan.<br>
+        Maak je veel foto's van je kinderen of ben jij altijd diegene die op vriendenuitjes of familiefeesten de foto's neemt en sta je er dan nooit zelf bij op?<br><br>
+        Dat is zo herkenbaar voor velen terwijl het net heel waardevol is om samen mooie foto's te hebben waar jullie allemaal op staan.<br><br>
         Daarom zie ik een shoot niet als een kost maar als een investering die je zal doen lachen en je de rest van je leven zal kunnen koesteren.<br>
         <br>
         <button class="button button1"><a href="pages/friends_family_love.html">Portfolio</a></button>
