--- a/pages/animal.html
+++ b/pages/animal.html
@@ -61,7 +61,7 @@
       <div class="col-lg-12">
         <div class="intro-message">
           <div class="name-animal">
-          <h1>Trouwe viervoeter</h1>
+          <h1 class="title-page">Trouwe viervoeter</h1>
           </div>
             <h3>Fotosessies op locatie in natuurlijk licht <br>
             Portret- en actiefoto's mogelijk <br>
