--- a/pages/contact.html
+++ b/pages/contact.html
@@ -101,7 +101,7 @@
     <p>Berichtje</p>
       <textarea name="Message" placeholder="Berichtje" required></textarea>
       <br><br>
-      <button type="submit">Versturen</button>
+      <button  class="button-send" type="submit">Versturen</button>
      </form>
     </p>
   </div>
