--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <div class="dropdown-content">
         <a href="pages/animal.html">Animal</a><br>
-        <a href="pages/friends_family_love.html">Friends, <br>Family <br>Love</a>
-        <a href="pages/contact.html">Contact</a><br>
+        <a href="pages/riends_family_love.html">Friends<br>Family <br>Love</a><br>
+        <a href="pages/contact.html">Contact</a>
       </div>
     </div>
   </div>
