--- a/pages/contact.html
+++ b/pages/contact.html
@@ -89,7 +89,7 @@
       <input type="email" name="Email" placeholder="Email" required>
     <p>GSM nummer</p>
     <input type="tel" name="Telefoon" placeholder="GSM nummer" required>
-    <p>Kies uw photoshoot</p>
+    <p>Kies uw fotoshoot</p>
     <select name="Photography">
       <option>Kies uw photoshoot</option>
       <option>Huisdieren shoot</option>
