--- a/pages/contact.html
+++ b/pages/contact.html
@@ -115,7 +115,10 @@
     <p class="overlay__description">
       De fotoshoot zal een uurtje in beslag nemen.<br><br>
       Enkele dagen na de fotoshoot ontvang je een map in je mailbox met hierin +- 20 bewerkte foto's. <br><br>
-
+      Alle foto's worden professioneel nabewerkt<br><br>
+      Fotoshoot op maat, naar eigen wens<br><br>
+      Liefdevolle, spontane en speelse foto's<br><br>
+      Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.<br><br>
       * Gelieve rekening te houden dat de fotoshoot verplaatst moet worden als het weer het niet toe laat.
     </p>
   </div>
