--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <span class="card-description subtle">
         <li>Gediplomineerd fotograaf</li><br>
         <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
-        <li>Voor dit bedrag ontvangt u een album met <br>20 bewerkte foto's</li><br>
+        <li>Een album met 20 bewerkte foto's</li><br>
         <li>Alle foto's worden professioneel nabewerkt</li><br>
         <li>Een fotoshoot duurt doorgaans een uurtje</li><br>
         <li>Fotoshoot op maat, naar eigen wens</li><br>
