--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div class="card-container">
   <div class="card u-clearfix">
     <div class="card-body">
-      <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
+      <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?1</h2>
       <span class="card-description subtle">
         <li>Gediplomineerd fotograaf</li><br>
         <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
