--- a/pages/animal.html
+++ b/pages/animal.html
@@ -71,8 +71,8 @@
             <br></h3>
           <hr class="intro-divider">
           <div class="social-media">
-            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
-            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" style="color: #ab858c"></a>
+            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" style="color: #ab858c"></a>
           </div>
         </div>
       </div>
@@ -195,11 +195,10 @@
 </div>
 
 <footer>
-  <h4>Blijf op de hoogte door me te volgen op Facebook / Instagram.</h4>
-  <div class="social-mediafooter">
-    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
-    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
-    <a href="contact.html" class="fa fa-envelope" id="footerimg"></a>
+  <div class="social-media">
+    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+    <a href="pages/contact.html" class="fa fa-envelope"></a>
   </div>
 </footer>
 
