--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,8 +64,8 @@
           <hr class="intro-divider">
           <div class="social-media">
             <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram</h6>
-            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
-            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" style="color: #ab858c"></a>
+            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" style="color: #ab858c"></a>
           </div>
         </div>
       </div>
@@ -140,11 +140,10 @@
 </div>
 <br><br>
 <footer>
-  <h4>Blijf op de hoogte door me te volgen op<br> Facebook / Instagram</h4>
-  <div class="social-mediafooter">
-    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" id="footerimg"></a>
-    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" id="footerimg"></a>
-    <a href="contact.html" class="fa fa-envelope" id="footerimg"></a>
+  <div class="social-media">
+    <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+    <a href="pages/contact.html" class="fa fa-envelope"></a>
   </div>
 </footer>
 </body>
