--- a/pages/contact.html
+++ b/pages/contact.html
@@ -86,11 +86,11 @@
     <p>Naam + voornaam</p>
     <input type="text" name="Name" placeholder="Naam + voornaam" required class="inputbox">
     <p>Email</p>
-      <input type="email" name="Email" placeholder="Email" required class="inputbox">>
+      <input type="email" name="Email" placeholder="Email" required class="inputbox">
     <p>GSM nummer</p>
-    <input type="tel" name="Telefoon" placeholder="GSM nummer" required class="inputbox">>
+    <input type="tel" name="Telefoon" placeholder="GSM nummer" required class="inputbox">
     <p>Kies uw fotoshoot</p>
-    <select name="Photography" class="inputbox">>
+    <select name="Photography" class="inputbox">
       <option>Kies uw photoshoot</option>
       <option>Huisdieren shoot</option>
       <option>Koppel/duo shoot</option>
@@ -99,7 +99,7 @@
       <option>Interesse in een andere shoot?</option>
     </select><br>
     <p>Berichtje</p>
-      <textarea name="Message" placeholder="Berichtje" required class="inputbox">></textarea>
+      <textarea name="Message" placeholder="Berichtje" required class="inputbox"></textarea>
       <br><br>
       <button  class="button-send" type="submit">Versturen</button>
      </form>
