--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,26 +83,26 @@
     </p>
     <p class="overlay__description">
     <form action="https://formspree.io/f/mbjezgqz" method="POST">
-    <p>Naam + voornaam</p>
-    <input type="text" name="Name" placeholder="Naam + voornaam" required>
-    <p>Email</p>
-      <input type="email" name="Email" placeholder="Email" required>
-    <p>GSM nummer</p>
-    <input type="tel" name="Telefoon" placeholder="GSM nummer" required>
-    <p>Kies uw fotoshoot</p>
-    <select name="Photography">
-      <option>Kies uw photoshoot</option>
-      <option>Huisdieren shoot</option>
-      <option>Koppel/duo shoot</option>
-      <option>Familie shoot</option>
-      <option>Persoonlijke/one shoot</option>
-      <option>Interesse in een andere shoot?</option>
-    </select><br>
-    <p>Berichtje</p>
-      <textarea name="Message" placeholder="Berichtje" required></textarea>
+      <p>Naam + voornaam</p>
+      <input type="text" name="Name" placeholder="Naam + voornaam" required class="inputbox">
+      <p>Email</p>
+      <input type="email" name="Email" placeholder="Email" required class="inputbox">
+      <p>GSM nummer</p>
+      <input type="tel" name="Telefoon" placeholder="GSM nummer" required class="inputbox">
+      <p>Kies uw fotoshoot</p>
+      <select name="Photography" class="inputbox">
+        <option>Kies uw photoshoot</option>
+        <option>Huisdieren shoot</option>
+        <option>Koppel/duo shoot</option>
+        <option>Familie shoot</option>
+        <option>Persoonlijke/one shoot</option>
+        <option>Interesse in een andere shoot?</option>
+      </select><br>
+      <p>Berichtje</p>
+      <textarea name="Message" placeholder="Berichtje" required class="inputbox"></textarea>
       <br><br>
       <button  class="button-send" type="submit">Versturen</button>
-     </form>
+    </form>
     </p>
   </div>
 </div>
@@ -130,11 +130,11 @@
       Enkele tips voor de fotoshoot:
     </h1>
     <p class="overlay__description">
-      <ul>
+    <ul>
       <li>Zorg voor matching outfits, het is mogelijk om in verschillende outfits de shoot te doen.</li> <br>
       <li>Draag kleren waar je u comfortabel in voelt.</li> <br>
-     <li> Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zijn.</li><br>
-  </ul>
+      <li> Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zijn.</li><br>
+    </ul>
     </p>
   </div>
 </div>
