--- a/pages/animal.html
+++ b/pages/animal.html
@@ -198,7 +198,7 @@
   <div class="social-media">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
     <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
-    <a href="pages/contact.html" class="fa fa-envelope"></a>
+    <a href="pages/contact.html" class="fa fa-envelope" id="envelope"></a>
   </div>
 </footer>
 
